--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
   <body>
-    Hello world
+    <!-- Header -->
+    <header>
+      <div class="main-container flex flex_justify-between flex_align-center">
+        <section class="flex flex_align-center">
+          <div class="logo">LOGO</div>
+          <ul class="flex flex_align-center">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Store</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </section>
+        <section class="flex flex_align-center">
+          <a href="#" class="login-btn">Already have an account?</a>
+          <button class="btn btn-primary">Sign up</button>
+        </section>
+      </div>
+    </header>
   </body>
 </html>
