--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <header>
       <div class="main-container flex flex_justify-between flex_align-center">
         <section class="flex flex_align-center">
-          <div class="logo">LOGO</div>
+          <div class="logo">
+            <img src="./assets/img/logo.jpg" alt="logo" />
+          </div>
           <ul class="flex flex_align-center">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
